# dataclasses-plus

./: README.md  pyproject.toml
dataclasses_plus/: __init__.py  enhanced_dataclass.py
dataclasses_plus/features/: json.py  primitive.py  yaml.py
tests/: test_dataclass.py  test_json_feature.py  test_primitive_feature.py  test_yaml_feature.py
