[tool.poetry]
name = "dataclasses-plus"
version = "0.1.0"
description = "Enhanced dataclasses"
authors = ["yoshnary <yoshinari.nozomu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
